login get cookies

--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -46,6 +46,7 @@
 						<li class="divider"></li>  -->               
 						<li><a id="user_logout" href="javascript://"><span class="fa fa-power-off"></span>&nbsp;&nbsp;Log Out</a></li>
 						<li class="divider"></li>
+						<li><a id="syncchk" href="javascript://"><span class="fa fa-power-off"></span>&nbsp;&nbsp;sync</a></li>
 <!-- 						<li>&nbsp;&nbsp;Audio Cues
 						<a id="audioCues" href="javascript://">
 							<div class="onoffswitch h-align-middle">
