issue #91 fixed, color changes

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/optionview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/optionview.html
@@ -1,5 +1,5 @@
 <div class="tile-more-content no-padding">
-	<div class="tiles green">
+	<div class="tiles blue">
 		<div class="tile-footer drag">
 			Hotspot <i class="fa fa-chevron-right"></i> <span class="semi-bold">{{shape}} Element</span>
 		</div>
@@ -24,7 +24,7 @@
 			<div id="knob" class="form-group rotateCtrl">
 				Rotate <input type="text" class="dial" data-min="0" data-max="360"
 				 data-width="40" data-height="40" data-displayInput=false data-thickness=".7"
-				  data-fgColor="#0AA699" data-bgColor="#d1dade" data-angleOffset="90" data-cursor=true>
+				  data-fgColor="#0090D9" data-bgColor="#d1dade" data-angleOffset="90" data-cursor=true>
 			</div>
 
 			
