--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/textview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/textview.html
@@ -1,6 +1,6 @@
 <div class="tile-more-content no-padding">
   
-  <div class="tiles green">
+  <div class="tiles blue">
     
     <div class="tile-footer drag">
       Hotspot 
@@ -115,7 +115,7 @@
         
         <div class="textProp slider success">
           Size 
-          <input type="text" id="hotspot-textelement-fontsize" class="fontSize" data-slider-max="80" data-slider-step="1" data-slider-value="{{fontSize}}" data-slider-orientation="horizontal" data-slider-selection="before">
+          <input type="text" id="hotspot-textelement-fontsize" class="fontSize" data-slider-max="80" data-slider-step="1" data-slider-value="{{fontSize}}" data-slider-orientation="horizontal" data-slider-selection="before" style="width:85%">
           
         </div>
         
@@ -129,7 +129,7 @@
       
       <div class="form-group inline rotateCtrl">
         Rotate 
-        <input type="text" class="dial" data-min="0" data-max="360" data-width="40" data-height="40" data-displayInput=false data-thickness=".7" data-fgColor="#0AA699" data-bgColor="#d1dade" data-angleOffset="90" data-cursor=true>
+        <input type="text" class="dial" data-min="0" data-max="360" data-width="40" data-height="40" data-displayInput=false data-thickness=".7" data-fgColor="#0090D9" data-bgColor="#d1dade" data-angleOffset="90" data-cursor=true>
         
       </div>
       
