--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/mcq-property-box/templates/mcqpropview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/mcq-property-box/templates/mcqpropview.html
@@ -1,5 +1,5 @@
 <div class="tile-more-content no-padding" >
-	<div class="tiles green">
+	<div class="tiles blue">
 		<div class="tile-footer drag">
 			MCQ <i class="fa fa-chevron-right"></i> <span class="semi-bold">Multiple Choice Question Properties</span>
 		</div>
