--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
@@ -1,5 +1,5 @@
 <div class="tile-more-content no-padding">
-	<div class="tiles green">
+	<div class="tiles blue">
 		<div class="tile-footer drag">
 			FIB <i class="fa fa-chevron-right"></i> <span class="semi-bold">Fill In The Blanks Properties</span>
 		</div>
@@ -123,7 +123,7 @@
         
 				<div class="textProp slider success">
 					Font Size 
-					<input type="text" id="fib-fontsize" class="fontSize" data-slider-max="30" data-slider-min="12" data-slider-step="1" data-slider-value="{{font_size}}" data-slider-orientation="horizontal" data-slider-selection="before">
+					<input type="text" id="fib-fontsize" class="fontSize" data-slider-max="30" data-slider-min="12" data-slider-step="1" data-slider-value="{{font_size}}" data-slider-orientation="horizontal" data-slider-selection="before" style="width:85%">
 
 				</div>
 
