--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -72,7 +72,7 @@
                 <h5 class="bold">Quiz Instructions</h5>
                     {{&instructions}}
                     {{^instructions}}
-                        This quiz has no instructions
+                        This is a class test and can be attempted just once, therefore ensure you have answered all questions before ending the quiz.
                     {{/instructions}}
             </div>
         </div>
