--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -833,3 +833,18 @@
 #slides-info{
 	font-size: 16px;
 }
+
+/*Big Answer*/
+textarea{
+	&.underline{
+		background: url(../../../images/underline.gif) repeat-x 100% 100%;
+		border: none;
+	}
+
+	&.border{
+		border:15px solid transparent;
+		-webkit-border-image:url(../../../images/border.gif) 20 20 stretch; /* Safari 5 */
+		     -o-border-image:url(../../../images/border.gif) 20 20 stretch; /* Opera */
+				border-image:url(../../../images/border.gif) 20 20 stretch;
+	}
+}
