issue #108: - video unavailable image if video is deleted from folder or from media library

--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
@@ -1,7 +1,7 @@
   <div class="meta name">
     <div class="img_wrapper"> {{&thumbnail}}</div>
     <div class="titles">
-      <h3 class="normal"><a class="textbook_titles" data-id="{{term_id}}" href="#textbook/{{term_id}}">{{name}}</a></h3>
+      <h3 class="normal"><a class="textbook_titles" data-id="{{term_id}}" href="#textbook/{{term_id}}">{{&name}}</a></h3>
       <p class="small-text">{{author}}</p>
     </div>
   </div>
