--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -184,6 +184,11 @@ tbody.rowlink{
 	padding: 10px 18px 5px 24px;
 }
 
+.pointer{
+	cursor: pointer;
+}
+
+
 // .mashmenu .mod .mod-content,.mashmenu .menu .sub-content{border-bottom-color:@color-info}
 // .mashmenu .mod:hover a,.mashmenu .menu li.level0:hover>a,.mashmenu .menu .sub-channel li a,.mashmenu .menu li.level0:hover .sub-channel li.hover a .fa-chevron-right,.mashmenu .columns .list a{color:#2AA4CF}
 // .mashmenu .mod .mod-content,.mashmenu .mod:hover,.mashmenu .menu li.level0:hover>a,.mashmenu .menu li.level0:hover .sub-channel li.hover a{background-color:@color-white}
