--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -2452,6 +2452,9 @@ tbody.rowlink td {
 .tiles-head {
   padding: 10px 18px 5px 24px;
 }
+.pointer {
+  cursor: pointer;
+}
 @media (max-width: 767px) {
   .login-container {
     margin-top: 20px !important;
