modules search loader

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
@@ -20,9 +20,9 @@
         </tbody>
     </table>
     <div id="pager" class="pager">
-        <i class="fa fa-chevron-left prev"></i>
+        <i class="cursor fa fa-chevron-left prev"></i>
         <span style="padding:0 15px"  class="pagedisplay"></span>
-        <i class="fa fa-chevron-right next"></i>
+        <i class="cursor fa fa-chevron-right next"></i>
         <select class="pagesize">
             <option selected value="25">25</option>
             <option value="50">50</option>
