--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
@@ -328,7 +328,9 @@
 
         <div class="row">
         	<div class="col-sm-12">
-        		<button type="submit" class="btn btn-success btn-cons2 right pull-right m-t-10" id="save-content-collection"> <i class="fa fa-check"></i> Save</button>
+        		<button type="submit" class="btn btn-success btn-cons2 right pull-right m-t-10" id="save-content-collection"> 
+                <i class="fa fa-check"></i> 
+                Save</button>
         	</div>
         </div>
 	</div>
