fixed issue  #121 select all completed modules send sms button hidden

--- a/wp-content/themes/walnut/walnut/dev/js/apps/admin-content-modules/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/admin-content-modules/templates/outer-template.html
@@ -58,9 +58,9 @@
                     <i class="fa fa-check"></i> Send Email
                 </button>
 
-                <button id="send-sms" style="display:none" class="btn btn-info btn-cons2 right pull-left m-t-10" type="submit">
+                <!--<button id="send-sms" style="display:none" class="btn btn-info btn-cons2 right pull-left m-t-10" type="submit">
                     <i class="fa fa-check"></i> Send SMS
-                </button>
+                </button>-->
             </div>
         </div>
     </div>
