--- a/wp-content/themes/walnut/walnut/dev/js/apps/teaching-modules/templates/content-modules-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teaching-modules/templates/content-modules-list.html
@@ -41,6 +41,7 @@
                     {{/take_quiz}}
                     <th class="{sorter:\'minutesSort\'}">Duration</th>
                     <th><div id="status_header">Status</div></th>
+                    <th>Schedule Date</th>
                   </tr>
                 </thead>
                 <tbody>
