--- a/wp-content/themes/walnut/walnut/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut/dev/css/style.css
@@ -61,6 +61,9 @@
 .p-t-60 {
   padding-top: 60px;
 }
+.vHidden {
+  visibility: hidden;
+}
 /*Custom Colors*/
 :-moz-placeholder {
   color: #55606e;
