sync view display changes on frontend, issue fix in second time sync with no data to export

--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/right/templates/right.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/right/templates/right.html
@@ -7,6 +7,8 @@
 				<div class="iconset top-settings-dark"></div> 	
 			</a>
 			<ul aria-labelledby="user-options" role="menu" class="dropdown-menu pull-right">
+                                <li><a href="#sync"><span class="fa fa-refresh"></span>&nbsp;&nbsp;Sync</a></li>
+                                <li class="divider"></li>  
 				<li><a id="user_logout" href="javascript://"><i class="fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a></li>
 			</ul>
 		</li>
