--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
@@ -36,7 +36,7 @@
 					{{getSubSectionsNames}}	                  
                 </div>
                 <div class="col-xs-4">
-                	<label class="form-label bold small-text">Time on question</label>
+                	<label class="form-label bold small-text">Time allotted for the question</label>
 	                	<i class="fa fa-clock-o"></i> <span id="time-on-question">{{getQuestionDuration}}</span> m
                 </div>
               </div>
