--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -330,6 +330,9 @@ textarea.error, .select2-choice.error {
 	th:nth-child(3){
 		width: 100px;
 	}
+	th.duration{
+		width: 10%;
+	}
 	th:last-child{
 		width: 30%;
 	}
