--- a/wp-content/themes/walnut/walnut/dev/js/apps/teaching-modules/templates/content-modules-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teaching-modules/templates/content-modules-list.html
@@ -39,7 +39,7 @@
                     {{#take_quiz}}
                         <th class="v-align-middle">Quiz Type</th>
                     {{/take_quiz}}
-                    <th class="{sorter:\'minutesSort\'}">Duration</th>
+                    <th class="{sorter:\'minutesSort\'} duration">Duration</th>
                     <th><div id="status_header">Status</div></th>
                     <th>{{#take_quiz}}Taken On{{/take_quiz}}
                     {{^take_quiz}}Schedule Date{{/take_quiz}}</th>
