changed label of class test on add/edit quiz

--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
@@ -95,7 +95,7 @@
                 <label class="form-label">Quiz Type</label>
                 <select name="quiz_type" id="qType" class="form-control">
                     <option value="practice">Practice</option>
-                    <option value="test">Class Test</option>
+                    <option value="test">Quiz</option>
                 </select>
             </div>
             <div class="col-md-6">
