--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -4,7 +4,11 @@
             It is designed to help you train for the class tests.</span></h4>
     </div>
 {{/practice_mode}}
-
+{{^practice_mode}}
+    <div class="well text-center">
+        <h4><span class="bold">This is a class test and can be attempted just once, therefore ensure you have answered all questions before ending the quiz.</span></h4>
+    </div>
+{{/practice_mode}}
 <div class="tiles white grid simple animated fadeIn'">
     <div class="grid-title">
         <div class="row">
@@ -72,7 +76,7 @@
                 <h5 class="bold">Quiz Instructions</h5>
                     {{&instructions}}
                     {{^instructions}}
-                        This is a class test and can be attempted just once, therefore ensure you have answered all questions before ending the quiz.
+                        This quiz has no instructions.
                     {{/instructions}}
             </div>
         </div>
