--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
@@ -3,7 +3,7 @@
       {{&thumbnail}}
     </div>
     <div class="titles">
-      <h3 class="normal"><a class="textbook_titles" data-id="{{term_id}}" href="{{url}}">{{name}}</a></h3>
+      <h3 class="normal"><a class="textbook_titles" data-id="{{term_id}}" href="{{url}}">{{&name}}</a></h3>
       <p class="small-text">{{author}}</p>
     </div>
 </div>
