--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-description.html
@@ -1,6 +1,6 @@
 <!-- BEGIN PAGE TITLE -->
 <div class="page-title"><!--<i class="icon-custom-left"></i>-->
-	<h3>Textbook<span class="semi-bold"> {{name}}</span></h3>		
+	<h3>Textbook<span class="semi-bold"> {{&name}}</span></h3>		
 </div>
 <!-- END PAGE TITLE -->
 <div class="tiles cover-pic-wrapper">						
@@ -23,9 +23,9 @@
 			</div>
 		</div>
 		<div class="col-md-7 user-description-box  col-sm-7">
-			<h4 class="semi-bold no-margin">{{name}}</h4>
+			<h4 class="semi-bold no-margin">{{&name}}</h4>
 			<h6 class="no-margin">By {{author}}</h6>
-			<p>{{description}}</p>
+			<p>{{&description}}</p>
 		</div>
 		<!--<div class="col-md-3  col-sm-3">
 			<h5 class="normal">Chapters ( <span class="text-success">{{chapter_count}}</span> )</h5>
