randomise permission checked by default skipped button for all quizzes helper text for skip if single attempt

--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
@@ -208,7 +208,7 @@
                                     </div>
                                     <div class="col-sm-3">
                                         <div class="checkbox check-info checkbox-circle perm">
-                                            <input name="permissions[randomize]" id="random" type="checkbox" value="1">
+                                            <input name="permissions[randomize]" id="random" type="checkbox" {{defaultRandomize}} value="1">
                                             <label for="random">Randomize Order</label>
                                         </div>
                                     </div>
