marks placement changed

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -12,20 +12,24 @@
         <div class="tiles grey p-t-10 p-b-10 p-l-20">
             <div class="muted">
                 <span class="bold question-type-div">Difficulty Level:</span> <span class="question-type-div"> {{difficulty_level}}</span>
-                {{#display_answer}}
-                <div id="correct-answer-div">
-                    <span class="bold">Marks Obtained:</span> {{marks_obtained}}/{{total_marks}}
-                </div>
-                {{/display_answer}}
             </div>
             <div class="clearfix"></div>
         </div>
 	</div>
     {{#responseStatus}}
         <div class="qstnStatus {{statusUI.divClass}} p-t-10">
-            {{#display_answer}}<i class="fa  {{statusUI.icon}}"></i>  {{&statusUI.text}}{{/display_answer}}
+            {{#display_answer}}
+                <i class="fa  {{statusUI.icon}}"></i>  {{&statusUI.text}}
+            {{/display_answer}}
+
             <div>
-                <label class="form-label small-text text-grey inline">Time Taken: <span class="bold">{{timeTaken}}</span></label></div>
+                {{#display_answer}}
+                    <label>
+                        Marks Obtained: <span class="bold">{{marks_obtained}}/{{total_marks}}</span>
+                    </label>
+                {{/display_answer}}
+                <label class="form-label small-text text-grey inline">Time Taken: <span class="bold">{{timeTaken}}</span></label>
+            </div>
         </div>
     {{/responseStatus}}
 </div>
