--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -68,7 +68,16 @@
                     <label class="form-label">Marks</label>
                     {{marks}}
                     {{#display_marks}} 
-                        <h4 class="text-success semi-bold no-margin inline">(You scored: <span class="bold">{{total_marks_scored}}</span>)</h4>
+                        <h4 class="text-success semi-bold no-margin inline">
+                            {{#negMarksEnable}}
+                                You scored: <span class="bold">{{total_marks_scored}}</span><br>
+                                Negative marks: <span class="bold">0</span><br> 
+                                Total scored: <span class="bold">{{total_marks_scored}}</span><br>
+                            {{/negMarksEnable}}
+                            {{^negMarksEnable}}
+                                (You scored: <span class="bold">{{total_marks_scored}}</span>)
+                            {{/negMarksEnable}}
+                        </h4>
                     {{/display_marks}}
             </div>
             <div class="col-md-3">
@@ -101,7 +110,4 @@
     {{#try_again}}
         <button type="button" class="btn btn-success btn-lg btn-large btn-cons2 m-r-10" id="try-again"> Try Again</button>
     {{/try_again}}
-
-
-    {{#answer_printing}} <button type="button" class="btn btn-info btn-lg btn-large btn-cons2" id="print-quiz"> Print Quiz Answers</button> {{/answer_printing}}
 </div>
