marks scored: negative, scored and total

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -70,8 +70,8 @@
                     {{#display_marks}} 
                         <h4 class="text-success semi-bold no-margin inline">
                             {{#negMarksEnable}}
-                                You scored: <span class="bold">{{total_marks_scored}}</span><br>
-                                Negative marks: <span class="bold">0</span><br> 
+                                You scored: <span class="bold">{{marks_scored}}</span><br>
+                                Negative marks: <span class="bold">{{negative_scored}}</span><br> 
                                 Total scored: <span class="bold">{{total_marks_scored}}</span><br>
                             {{/negMarksEnable}}
                             {{^negMarksEnable}}
