--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-progress/templates/quiz-progress-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-progress/templates/quiz-progress-tpl.html
@@ -9,7 +9,7 @@
 		Questions Skipped: <span id="skipped-questions">0</span>
 	</div>
 {{/showSkipped}}
-<div class="quizSteps">
+<div class="quizSteps p-b-10">
 	<ul id="quiz-items">
 	</ul>
 	<div class="clearfix"></div>
