--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/view-single-module/module-description/templates/module-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/view-single-module/module-description/templates/module-description.html
@@ -6,7 +6,7 @@
 </button>
 {{#isTraining}}
 <div class="well text-center">
-    <h4><span class="bold">This is a practise mode.
+    <h4><span class="bold">This is a practice mode.
             It is designed to help you train for the class</span></h4>
 </div>
 {{/isTraining}}
