fixed issue #173 changed all popups for quiz to bootbox

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -30,6 +30,7 @@
                 {{/display_answer}}
                 <label class="form-label small-text text-grey inline">Time Taken: <span class="bold">{{timeTaken}}</span></label>
             </div>
+            {{#hint}}<div class="small">Viewed Hint: {{hint_viewed}}</div>{{/hint}}
         </div>
     {{/responseStatus}}
 </div>
