--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -1,34 +1,9 @@
-<div id="content-board" class="quizContent no-margin"></div>
-
-<div class="well m-b-10 p-t-10 p-b-10 h-center quizActions"> 
-    <button type="button" id="previous-question" class="btn btn-info pull-left"> 
-        <i class="fa fa-backward"></i> Previous 
-    </button> 
-    {{#allow_submit_answer}}
-    <button type="button" id="submit-question" class="btn btn-success pull-right"> 
-        Submit <i class="fa fa-forward"></i> 
-    </button> 
-    {{/allow_submit_answer}}
-    <button type="button" style="display:none" id="next-question" class="btn btn-info pull-right"> 
-        Next <i class="fa fa-forward"></i> 
-    </button> 
-    <button type="button" id="skip-question" class="btn btn-default btn-sm btn-small h-center block"> 
-        <i class="fa fa-refresh"></i> Skip 
-    </button> 
-    {{#allow_hint}}
-    <button type="button" id="show-hint" class="btn btn-default btn-sm btn-small h-center block"> 
-        <i class="fa fa-refresh"></i> Show Hint 
-    </button> 
-    {{/allow_hint}}
-    <div class="clearfix"></div>
-</div>                                
-
 <div class="tiles grey text-grey b-grey b-b m-t-30 qstnInfo">
-    <div class="grid simple m-b-0 transparent"> 
+    <div class="simple m-b-0 transparent"> 
         <div class="grid-title no-border"> 
             <p class="small-text bold inline text-grey"><span class="fa fa-question"></span> Question Info </p>
         </div>
-        <div class="grid-body no-border"> 
+        <div class="no-border"> 
             <p class="bold inline text-grey">{{&instructions}}</p>
         </div> 
         <div class="qstnInfoBod no-border m-t-10 p-b-5 p-r-20 p-l-20"> 
@@ -36,3 +11,53 @@
         </div> 
     </div>
 </div>
+<div id="content-board" class="quizContent no-margin"></div>
+
+<div class="well m-b-10 p-t-10 p-b-10 h-center quizActions"> 
+    <span class="pull-left" id="first_question"></span>
+    <button type="button" id="previous-question" class="btn btn-info pull-left"> 
+        <i class="fa fa-backward"></i> Previous 
+    </button>
+    {{#allow_submit_answer}}
+   <button type="button" id="submit-question" class="btn btn-success pull-right">
+        Submit <i class="fa fa-forward"></i> 
+    </button>
+    {{/allow_submit_answer}}
+
+    <span class="pull-right" id="last_question"></span>
+    <button type="button" id="next-question" class="none btn btn-info pull-right">
+        Next <i class="fa fa-forward"></i> 
+    </button>
+
+    <div class="text-center">
+        {{#show_hint}}
+        <button type="button" id="show-hint" class="btn btn-default btn-sm btn-small m-r-10">
+            <i class="fa fa-lightbulb-o"></i> Hint
+        </button>
+        {{/show_hint}}
+        {{#show_skip}}
+            <button type="button" id="skip-question" class="btn btn-default btn-sm btn-small">
+                Skip <i class="fa fa-step-forward"></i>
+            </button>
+        {{/show_skip}}
+        {{#show_skip_helper_text}}
+            <div><i class="small">(questions once skipped cannot be answered later)</i></div>
+        {{/show_skip_helper_text}}
+    </div>
+    <div class="clearfix"></div>
+</div>                                
+{{#showComment}}
+    <div class="tiles grey text-grey b-grey b-b m-t-30 qstnInfo">
+        <div class="grid simple m-b-0 transparent"> 
+            <div class="grid-title no-border grid-body-toggle"> 
+                <p class="small-text bold inline text-grey">Comment </p>
+            </div>
+            <div class="grid-body no-border"> 
+                <p class="bold inline text-grey">{{&comment}}</p>
+            </div> 
+            <div class="qstnInfoBod no-border m-t-10 p-b-5 p-r-20 p-l-20"> 
+                <p class=""></p> 
+            </div> 
+        </div>
+    </div>
+{{/showComment}}
