--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -63,6 +63,9 @@
 .p-t-60 {
   padding-top: 60px;
 }
+.vHidden {
+  visibility: hidden;
+}
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
@@ -299,12 +302,12 @@
 .docket-body {
   background: #f3f3f3;
   padding: 15px 10px;
-  color: #000;
+  color: #003d4f;
   font-size: 14px;
   font-weight: normal;
 }
 .docket-body label {
-  color: #777a80;
+  color: #8d9eab;
 }
 .docket-body select.marks,
 .docket-body select.blanks {
@@ -527,14 +530,14 @@
   display: none;
 }
 .aj-imp-col-sel .tooltip-arrow {
-  border-top-color: #29333F;
+  border-top-color: #29333f;
   left: 2em;
 }
 .aj-imp-col-sel .tooltip-inner {
   width: auto;
   min-width: 250px;
   max-width: 300px;
-  background: #29333F;
+  background: #29333f;
 }
 .aj-imp-col-sel .tooltip-inner label {
   display: inline-block;
@@ -716,7 +719,7 @@
 }
 .imagewithtext img {
   position: relative;
-  z-index: 2;
+  z-index: 99;
   margin-right: 10px;
   cursor: pointer;
 }
@@ -736,7 +739,7 @@
   text-align: center;
   cursor: pointer;
   position: relative;
-  z-index: 2;
+  z-index: 99;
   color: #aaaaaa;
 }
 .image .image-placeholder .bicon,
@@ -751,12 +754,20 @@
   font-size: 40px;
   display: block;
 }
+.image img {
+  z-index: 99;
+}
+.image .ui-resizable-handle.ui-resizable-s {
+  height: 106%;
+  background-color: #edeef0;
+  bottom: -4px;
+}
 .aj-imp-upload-media {
   text-align: center;
 }
 .aj-imp-upload-media .aj-imp-upload-message {
   cursor: pointer;
-  background: #e4e4e4;
+  background: #e5e9ec;
   border-radius: 5px;
   padding: 10px;
   width: 40%;
@@ -923,6 +934,36 @@
 }
 #all-media-region .ui-selected .ticker:hover .glyphicon-ok {
   display: none;
+}
+.imaTitle {
+  cursor: move;
+  font-size: 18px;
+  margin-left: 5px;
+}
+.remove-media {
+  cursor: pointer;
+  font-size: 14px;
+}
+#slides-info {
+  font-size: 16px;
+}
+/*Big Answer*/
+textarea.underline {
+  background: url(../../../images/underline.gif) repeat-x 100% 100%;
+  border: none;
+}
+textarea.border {
+  border: 15px solid transparent;
+  -webkit-border-image: url(../../../images/border.gif) 20 20 stretch;
+  /* Safari 5 */
+  -o-border-image: url(../../../images/border.gif) 20 20 stretch;
+  /* Opera */
+  border-image: url(../../../images/border.gif) 20 20 stretch;
+}
+input[type="text"].rowColInput {
+  width: 30%;
+  float: left;
+  margin-right: 15px;
 }
 /*input[type=checkbox].mcq-option-select {
 	display:none;
@@ -1280,10 +1321,8 @@ p.mcq-option-text {
   clear: both;
   content: " ";
   /* 1 */
-
   display: table;
   /* 2 */
-
 }
 .countdown-row {
   width: 100%;
@@ -1677,31 +1716,23 @@ p.mcq-option-text {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
-
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
-
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
-
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
-
 }
 #textbooks.list .mix:hover {
   background-color: #f3f3f3;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
-
   -moz-transition: all 0.3s ease-out;
   /* Firefox 4-15 */
-
   -o-transition: all 0.3s ease-out;
   /* Opera 10.50–12.00 */
-
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
-
 }
 #textbooks.list .list_header .meta {
   margin-top: 0;
@@ -2000,10 +2031,10 @@ input#duration {
 .panel-default > .panel-heading.collapsed {
   background-color: transparent;
 }
-.cbp_tmtimeline li.setGroup {
+.setGroup {
   margin-bottom: 20px;
 }
-.cbp_tmtimeline li.setGroup .cbp_tmlabel {
+.setGroup .cbp_tmlabel {
   margin-bottom: 2px;
   padding: 10px;
 }
@@ -2088,14 +2119,27 @@ input#duration {
   right: 6px;
 }
 .quizSteps ul li.skip a {
-  background: #0090d9;
+  background: #fdd01c;
   color: #ffffff;
 }
 .quizSteps ul li.skip a:hover {
-  background: #006ea6;
+  background: #e4b702;
 }
 .quizSteps ul li.skip a:before {
-  content: "\f021";
+  content: "\f051";
+  bottom: 6px;
+  right: 8px;
+  font-size: 18px;
+}
+.quizSteps ul li.partiallyCorrect a {
+  background: #0090d9;
+  color: #ffffff;
+}
+.quizSteps ul li.partiallyCorrect a:hover {
+  background: #006ea6;
+}
+.quizSteps ul li.partiallyCorrect a:before {
+  content: "\f046";
   bottom: 6px;
   right: 8px;
   font-size: 18px;
@@ -2275,6 +2319,20 @@ ul.classes .classesWrap {
   padding-top: 4px;
   padding-bottom: 4px;
 }
+#textbooks.list.myClass .meta.name {
+  width: 40%;
+}
+#textbooks.list.myClass .meta.rec {
+  width: 20%;
+}
+#textbooks.list.myClass .txtbook {
+  cursor: pointer;
+  z-index: 2;
+  position: relative;
+}
+#textbooks.list.myClass .chapStatus {
+  width: 49%;
+}
 body {
   background-color: #e5e9ec;
   overflow-y: scroll;
@@ -2410,6 +2468,9 @@ tbody.rowlink td {
 .tiles-head {
   padding: 10px 18px 5px 24px;
 }
+.pointer {
+  cursor: pointer;
+}
 @media (max-width: 767px) {
   .login-container {
     margin-top: 20px !important;
@@ -2493,8 +2554,11 @@ textarea.error,
 #take-class-modules.takeClass th:nth-child(3) {
   width: 100px;
 }
+#take-class-modules.takeClass th.duration {
+  width: 10%;
+}
 #take-class-modules.takeClass th:last-child {
-  width: 40%;
+  width: 30%;
 }
 .table-fixed-layout td.cpHeight {
   white-space: normal;
@@ -2587,12 +2651,10 @@ ol > li {
 }
 :-moz-placeholder {
   /* Firefox 18- */
-
   color: #cdcdcd;
 }
 ::-moz-placeholder {
   /* Firefox 19+ */
-
   color: #cdcdcd;
 }
 :-ms-input-placeholder {
