--- a/HTML/assets/less/modules/layout.less
+++ b/HTML/assets/less/modules/layout.less
@@ -1217,11 +1217,11 @@ body {
     overflow: auto;
     position: relative;
     min-height: 911px;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
+    // -webkit-transition: all 0.3s ease-in-out;
+    // -moz-transition: all 0.3s ease-in-out;
+    // -o-transition: all 0.3s ease-in-out;
+    // -ms-transition: all 0.3s ease-in-out;
+    // transition: all 0.3s ease-in-out;
     &.condensed {
         margin-left: 50px;
     }
