take a quiz screen ui changed - issue #170

--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -1,6 +1,6 @@
 .container-grey{
 	background: @preview-grey;
-	border: 1px solid lighten(@dash-grey, 10%);
+	// border: 1px solid lighten(@dash-grey, 10%);
 	box-shadow: darken(@preview-grey, 10%) 0 0 0 3px inset;
 }
 
