--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
@@ -5,12 +5,54 @@
     </div>
 {{/practice_mode}}
 
-<div class="tiles white m-b-20">
+<div class="moduleInfo m-b-20">
 	<div class="b-grey b-b no-margin p-l-15 p-r-15 p-b-5 p-t-10">
+        <div class="modTime pause">
+            <a class="btn btn-small btn-block btn-white m-t-10"><h4 class="semi-bold text-info no-margin">{{name}}</h4></a>
+        </div>
+
+        <div class="pull-left b-grey b-l " style="width:80%;">
+            <div class="row m-l-0 m-r-0">
+                <div class="col-xs-4 b-grey b-r">
+                    <p class="bold small-text muted no-margin inline">Textbook: </p>
+                    {{getTextbookName}}
+                </div>
+                <div class="col-xs-4 b-grey b-r">
+                    <p class="bold small-text muted no-margin inline">Chapter: </p>
+                    {{getChapterName}}
+                </div>
+                <div class="col-xs-2 b-grey b-r">
+                    <p class="bold small-text muted no-margin inline">Section: </p>
+                    {{getSectionsNames}}
+                </div>
+                <div class="col-xs-2">
+                    <p class="bold small-text muted no-margin inline">Sub-Section: </p>
+                    {{getSubSectionsNames}}
+                </div>
+            </div>
+            <div class="row m-l-0 m-r-0 m-t-5">
+                <div class="col-xs-4 b-grey b-r">
+                    <p class="bold small-text muted no-margin inline">Advised time for current question:</p>
+                    <i class="fa fa-clock-o"></i> <span id="time-on-question">{{getQuestionDuration}}</span> m
+                </div>
+                <div class="col-xs-4 b-grey b-r">
+                    <p class="bold small-text muted no-margin inline">Marks for question:</p>
+                    <span id=""></span>
+                </div>
+                <div class="col-xs-4">
+                    <p class="bold small-text muted no-margin inline">Total Quiz Marks:</p>
+                    <span id=""></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="clearfix"></div>
+
+
 		<div class="row">
-			<div class="well m-b-10 col-sm-2">
+			<!-- <div class="well m-b-10 col-sm-2">
 				<h3 class="bold text-info">{{name}}</h3>                	
-			</div>
+			</div> 
 			<div class="col-sm-10">
 			  <div class="row  m-b-10">
                 <div class="col-xs-4 b-grey b-r">
@@ -40,9 +82,8 @@
 	                	<i class="fa fa-clock-o"></i> <span id="time-on-question">{{getQuestionDuration}}</span> m
                 </div>
               </div>
-  			</div>
+  			</div>-->
     		
-    		<div class="clearfix"></div>
     	</div>
 	</div>
 
