--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-progress/templates/quiz-progress-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-progress/templates/quiz-progress-tpl.html
@@ -1,7 +1,7 @@
 <div class="modProgress h-center">
 	<p class="bold small-text m-b-5 p-t-10 text-center">Questions Answered</p>
 		<div class="progress progress-large m-b-10">
-		<div id="quiz-progress-bar" data-percentage="0%" style="width: 0%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span id="answered-questions">0</span>/{{totalQuestions}}</div>
+		<div id="quiz-progress-bar" data-percentage="0%" style="width: 0%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"><span id="answered-questions">0</span>/{{totalQuestions}}</div>
 	</div>
 </div>
 {{#showSkipped}}
