--- a/wp-content/themes/walnut/walnut/dev/js/apps/students-dashboard/textbooks/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/students-dashboard/textbooks/templates/textbooks-list.html
@@ -1,5 +1,6 @@
 <div class="list" id="textbooks">
 	<!-- "TABLE" HEADER CONTAINING SORT BUTTONS (HIDDEN IN GRID MODE)-->
+	<button id="tableEntry" style="width:40px">database</button>
 	<div class="list_header">
 		<div class="meta name active desc" id="SortByName"> 
 			Name &nbsp; 
