--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -1,14 +1,3 @@
-{{#practice_mode}}
-    <div class="well text-center">
-        <h4><span class="bold">This is a practise quiz.
-            It is designed to help you train for the class tests.</span></h4>
-    </div>
-{{/practice_mode}}
-{{^practice_mode}}
-    <div class="well text-center">
-        <h4><span class="bold">This is a class test and can be attempted just once, therefore ensure you have answered all questions before ending the quiz.</span></h4>
-    </div>
-{{/practice_mode}}
 <div class="tiles white grid simple animated fadeIn'">
     <div class="grid-title">
         <div class="row">
@@ -70,8 +59,8 @@
                     {{#display_marks}} 
                         <h4 class="text-success semi-bold no-margin inline">
                             {{#negMarksEnable}}
-                                You scored: <span class="bold">{{total_marks_scored}}</span><br>
-                                Negative marks: <span class="bold">0</span><br> 
+                                You scored: <span class="bold">{{marks_scored}}</span><br>
+                                Negative marks: <span class="bold">{{negative_scored}}</span><br> 
                                 Total scored: <span class="bold">{{total_marks_scored}}</span><br>
                             {{/negMarksEnable}}
                             {{^negMarksEnable}}
