--- a/wp-content/themes/walnut/walnut/dev/js/apps/students-dashboard/textbooks/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/students-dashboard/textbooks/templates/list-item.html
@@ -3,7 +3,7 @@
       {{&thumbnail}}
     </div>
     <div class="titles">
-      <h3 class="normal"><a class="textbook_titles" data-id="{{term_id}}" href="{{url}}">{{name}}</a></h3>
+      <h3 class="normal"><a class="textbook_titles" data-id="{{term_id}}" href="{{url}}">{{&name}}</a></h3>
       <p class="small-text">{{author}}</p>
     </div>
 </div>
@@ -20,7 +20,7 @@
 
 <div class="meta modules rec">
     {{#take_quiz}}
-        <h4 class="b-grey b-b p-b-10 m-t-20 m-b-10">Total Quizzes: {{modules_count}}</h4>
+        <h4 class="b-grey b-b p-b-10 m-t-20 m-b-10">Total Quizzes: {{class_test_count}} <br> Practice Quizzes: {{practice_count}}</h4>
         <div class="chapStatus text-success"><h5 class="no-margin">Completed</h5> {{quizzes_completed}}</div>
         <div class="chapStatus text-error"><h5 class="no-margin">Not Started</h5> {{quizzes_not_started}}</div>
     {{/take_quiz}}
