quiz reports - single quiz report with list of students

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/templates/class-report-layout.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/templates/class-report-layout.html
@@ -6,7 +6,10 @@
 </div>
 
 <div class="grid-body no-border contentSelect" style="overflow: hidden; display: block;">
-    <div id="students-filter-region"></div>
+    <div class="row">
+        <div class="col-md-4">Number of Students : <span id="students-count"></span></div>
+        <div class="col-md-8" id="students-filter-region"></div>
+    </div>
     <div id="filters-region" class="m-b-10"></div>
 
     <ul class="nav nav-tabs b-grey b-l b-r b-t" id="addContent">
