--- a/wp-content/themes/walnut/walnut/dev/js/config/marionette/templates/modal.html
+++ b/wp-content/themes/walnut/walnut/dev/js/config/marionette/templates/modal.html
@@ -2,7 +2,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" data-dismiss="modal" aria-hidden="true" class="close">&times;</button>
-      <h4 class="modal-title">{{modal_title}}</h4>
+      <h4 class="modal-title">{{&modal_title}}</h4>
     </div>
     <div class="modal-body"></div>
   </div>
