students flow: quiz reports

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
@@ -1,7 +1,7 @@
 {{#quiz_report}}
     <div class="row tiles white grid simple">
         <div class="col-md-4">
-            <button type="button" id="go-back-button" class="btn btn-white btn-cons m-t-10">
+            <button type="button" class="btn btn-white btn-cons m-t-10 goto-prev-page">
                 <h4 class="bold  text-info no-margin">
                     <span class="fa fa-arrow-circle-left"></span>
                     Back to List of Quizzes
