--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/templates/outer-template.html
@@ -5,6 +5,7 @@
         <thead>
             <tr>
                 <th>Quiz Name</th>
+                <th>Textbook</th>
                 <th>Chapter</th>
                 <th>Duration</th>
                 <th>Type</th>
