--- a/wp-content/themes/walnut/walnut/dev/js/apps/students-dashboard/textbooks/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/students-dashboard/textbooks/templates/textbooks-list.html
@@ -1,38 +1,33 @@
-<div class="page-title"> <!--<i class="icon-custom-left"></i>-->
-	<h3>Text<span class="semi-bold">books</span></h3>
+<div class="list" id="textbooks">
+	<!-- "TABLE" HEADER CONTAINING SORT BUTTONS (HIDDEN IN GRID MODE)-->
+	<div class="list_header">
+		<div class="meta name active desc" id="SortByName"> 
+			Name &nbsp; 
+			<span class="sort anim150 asc active" data-sort="data-name" data-order="desc"></span> 
+			<span class="sort anim150 desc" data-sort="data-name" data-order="asc"></span> 
+		</div>
+
+		<div class="meta modules">Subjects
+			<span class="sort anim150 asc" data-sort="data-subjects" data-order="desc"></span> 
+			<span class="sort anim150 desc" data-sort="data-subjects" data-order="asc"></span>
+		</div>
+
+		{{#take_quiz}}
+			<div class="meta modules">
+			    Total Chapters
+			</div>
+		{{/take_quiz}}
+
+		<div class="meta rec">Status
+			<span class="sort anim150 asc" data-sort="data-modules" data-order="desc"></span>
+			<span class="sort anim150 desc" data-sort="data-modules" data-order="asc"></span>
+		</div>
+
+		
+	</div>
+
+	<div class="fail_element anim250">Sorry &mdash; we could not find any Textbooks matching matching these criteria</div>
+	<!-- BEGIN LIST OF textbooks (MANY OF THESE ELEMENTS ARE VISIBLE ONLY IN LIST MODE)-->
+	<ul class="textbooks_list">
+	</ul>
 </div>
-<div id="Filters" class="pull-left">
-			<div class="btn-group"> <a href="#" data-toggle="dropdown" class="btn dropdown-toggle btn-demo-space"> <span class="anim150">Class</span> <span class="caret"></span> </a>
-				<ul class="dropdown-menu">
-					<li class="active" data-filter="all" data-dimension="region"><a href="#">All</a></li>
-					{{#classes}}
-					<li class="" data-dimension="region" data-filter="{{slug}}"><a href="javascript://">{{label}}</a></li>
-					{{/classes}}
-				</ul>
-			</div>
-			<div class="btn-group"> <a class="btn dropdown-toggle btn-demo-space" data-toggle="dropdown" href="javascript://"> <span class="anim150">Subject</span> <span class="caret"></span> </a>
-				<ul class="dropdown-menu">
-					<li class="active" data-filter="all" data-dimension="recreation"><a href="#">All</a></li>
-					{{#subjects}}
-					<li class="filter_subjects" data-dimension="recreation" data-filter="{{.}}"><a href="javascript://">{{.}}</a></li>
-					{{/subjects}}
-				</ul>
-			</div>
-
-	</div>
-		<div class="clearfix"></div>
-
-		<div class="just list" id="textbooks">
-			<!-- "TABLE" HEADER CONTAINING SORT BUTTONS (HIDDEN IN GRID MODE)-->
-			<div class="list_header">
-				<div id="SortByName" class="meta name active desc"> Name &nbsp; <span data-order="desc" data-sort="data-name" class="sort anim150 asc active"></span> <span data-order="asc" data-sort="data-name" class="sort anim150 desc"></span> </div>
-				<div class="meta class">Class</div>
-				<div class="meta area">Subject</div>
-				<div class="meta area">Chapters</div>
-				<div class="meta area">Questions</div>
-			</div>
-			<div class="fail_element anim250">Sorry &mdash; we could not find any Textbooks matching matching these criteria</div>
-			<!-- BEGIN LIST OF textbooks (MANY OF THESE ELEMENTS ARE VISIBLE ONLY IN LIST MODE)-->
-			<ul class="textbooks_list">
-			</ul>
-	</div>
