--- a/wp-content/themes/walnut/walnut/dev/js/apps/teaching-modules/templates/content-modules-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teaching-modules/templates/content-modules-list.html
@@ -1,6 +1,6 @@
 <div class="tiles white grid simple  animated fadeIn">
     <div class="grid-title">
-        <h3 class="m-t-5 m-b-5">Textbook <span class="semi-bold">{{showTextbookName}}</span></h3>
+        <h3 class="m-t-5 m-b-5">Textbook <span class="semi-bold">{{&showTextbookName}}</span></h3>
     </div>
 
     <div class="grid-body contentSelect" style="overflow: hidden; display: block;">
